# fluvius

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml  release.yml
crates/fluvius-cli/: Cargo.toml
crates/fluvius-cli/src/: main.rs
crates/fluvius-connectors/: Cargo.toml
crates/fluvius-connectors/src/: file.rs  kafka.rs  lib.rs  mqtt.rs  websocket.rs
crates/fluvius-core/: Cargo.toml
crates/fluvius-core/src/: cep.rs  checkpoint.rs  edge.rs  event.rs  lib.rs  metrics.rs  operator.rs  pipeline.rs  predict.rs  replay.rs  spatial_index.rs  state.rs  temporal_join.rs  tenant.rs  topology.rs  watermark.rs  window.rs
crates/fluvius-geo/: Cargo.toml
crates/fluvius-geo/src/: geofence.rs  lib.rs  map_match.rs  proximity.rs  spatial_agg.rs  trajectory.rs
docs/: index.html
