[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/TileTopia-HQ/fluvius"
authors = ["TileTopia <tiletopia@proton.me>"]
description = "Hydrological network analysis and watershed delineation"
