[package]
name = "fluvius-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dashmap = "6"
crossbeam-channel = "0.5"
rstar = "0.12"
toml = "1.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
