[package]
name = "fluvius-geo"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fluvius-core = { path = "../fluvius-core" }
geo = "0.29"
rstar = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
